--- a/privacy.html
+++ b/privacy.html
@@ -1,24 +1,24 @@
-Privacy Policy
-
-Effective Date: 26.07.2024
-
-The Timer Bar Extension is committed to user privacy and does not collect, store, or transmit any personal data or user activity. The extension operates entirely within the user's browser and does not require any external data connections or permissions beyond what is necessary to display and control the timer.
-
-Data Collection and Use
-
-The Timer Bar Extension does not collect, store, or share any personal information from users. It does not track user activity or collect any form of user data.
-
-Permissions
-
-The extension requests the following permissions solely to perform its functions:
-
-activeTab: To inject the timer bar into the active webpage.
-storage: To save user preferences and timer settings.
-Changes to This Privacy Policy
-
-We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.
-
-Contact Us
-
-If you have any questions about this Privacy Policy, please contact us at extensionmushsupport@gmail.com.
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Privacy Policy</title>
+</head>
+<body>
+  <h1>Privacy Policy</h1>
+  <p>The Timer Bar Extension is committed to user privacy and does not collect, store, or transmit any personal data or user activity. The extension operates entirely within the user's browser and does not require any external data connections or permissions beyond what is necessary to display and control the timer.</p>
+  <h2>Data Collection and Use</h2>
+  <p>The Timer Bar Extension does not collect, store, or share any personal information from users. It does not track user activity or collect any form of user data.</p>
+  <h2>Permissions</h2>
+  <p>The extension requests the following permissions solely to perform its functions:</p>
+  <ul>
+    <li><strong>activeTab</strong>: To inject the timer bar into the active webpage.</li>
+    <li><strong>storage</strong>: To save user preferences and timer settings.</li>
+  </ul>
+  <h2>Changes to This Privacy Policy</h2>
+  <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.</p>
+  <h2>Contact Us</h2>
+  <p>If you have any questions about this Privacy Policy, please contact us at [Your Contact Email].</p>
+</body>
+</html>
