--- a/privacy.html
+++ b/privacy.html
@@ -19,6 +19,6 @@
   <h2>Changes to This Privacy Policy</h2>
   <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.</p>
   <h2>Contact Us</h2>
-  <p>If you have any questions about this Privacy Policy, please contact us at [Your Contact Email].</p>
+  <p>If you have any questions about this Privacy Policy, please contact us at mushyservices@gmail.com.</p>
 </body>
 </html>
